<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
    <ImageView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_pic"
        android:fadingEdgeLength="5dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
        android:gravity="center"
        android:paddingTop="16dp"
        />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
        android:padding="8dp"
        android:text="@string/track"/>
    <TextView
        android:layout_width="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/track1"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:padding="8dp"
            android:text="@string/country"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:padding="8dp"
            android:text="@string/country1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:padding="8dp"
            android:text="@string/email"/>
        <TextView
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/email1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:padding="8dp"
            android:text="@string/phone1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/slack"/>
        <TextView
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title.Inverse"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/slack1"/>

    </LinearLayout>
    </LinearLayout>

</LinearLayout>